src/objects/Apttus_Config2__OrderIncentiveBenefitData__c.object
<CustomObject>
    <description>Represents a single benefit data row associated with the incentive benefit for the order</description>
    <fields>
        <fullName>Apttus_Config2__BeneficiaryId__c</fullName>
        <description>ID of the beneficiary associated with the benefit</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the beneficiary associated with the benefit</inlineHelpText>
        <label>Beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BeneficiaryType__c</fullName>
        <description>The beneficiary type</description>
        <inlineHelpText>The beneficiary type</inlineHelpText>
        <label>Beneficiary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the benefit product associated with the benefit</description>
        <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
        <label>Benefit Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Incentive Benefit Data (Benefit Product)</relationshipLabel>
        <relationshipName>OrderIncentiveBenefitDataBenefitProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the criteria product associated with the benefit</description>
        <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
        <label>Criteria Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Incentive Benefit Data (Criteria Product)</relationshipLabel>
        <relationshipName>OrderIncentiveBenefitDataCriteriaProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByValues__c</fullName>
        <description>The group by field values</description>
        <externalId>true</externalId>
        <inlineHelpText>The group by field values</inlineHelpText>
        <label>Group By Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
        <relationshipName>OrderIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderId__c</fullName>
        <description>ID of the associated order</description>
        <inlineHelpText>ID of the associated order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
        <relationshipName>OrderIncentiveBenefitData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The rollup period end date</description>
        <inlineHelpText>The rollup period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The rollup period start date</description>
        <inlineHelpText>The rollup period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated rollup</description>
        <inlineHelpText>ID of the associated rollup</inlineHelpText>
        <label>Rollup</label>
        <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
        <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
        <relationshipName>OrderIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the sold to account</description>
        <inlineHelpText>The ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
        <relationshipName>OrderIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UsedBenefitAmount__c</fullName>
        <description>The benefit used on amount</description>
        <inlineHelpText>The benefit used on amount</inlineHelpText>
        <label>Used Benefit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UsedBenefitQuantity__c</fullName>
        <description>The benefit used on quantity</description>
        <inlineHelpText>The benefit used on quantity</inlineHelpText>
        <label>Used Benefit Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Order Incentive Benefit Data</label>
    <nameField>
        <displayFormat>OBD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Incentive Benefit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>